# hush

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ideas.md
cmake/: FindTBB.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: common.h  main.cpp
src/app/: viewer.cpp  viewer.h  viewerGui.cpp
src/app/gui/: imguiExtensions.h
src/camera/: camera.cpp  camera.h
src/denoiser/: atrousDenoiser.cpp  atrousDenoiser.h
src/gui/: cameraGui.cpp  denoiserGui.cpp  iGuiEditable.h  iGuiReadable.h  lightGui.cpp  materialGui.cpp  meshGui.cpp  pipelineGui.cpp  renderPassGui.cpp  rendererGui.cpp  sceneGui.cpp  viewerGui.cpp
src/gui/imgui/: imguiExtensions.cpp
src/interaction/: surfaceInteraction.cpp  surfaceInteraction.h
src/light/: light.cpp  light.h  lightSample.h  meshLight.cpp  meshLight.h  pointLight.cpp  pointLight.h
src/material/: dielectricMaterial.h  lambertianMaterial.cpp  lambertianMaterial.h  material.cpp  material.h  materialSample.h  phongMaterial.cpp  phongMaterial.h
src/math/: vector.h
src/pipeline/: buffer.cpp  buffer.h  pipeline.cpp  pipeline.h  pipelineBuilder.cpp  pipelineBuilder.h  pipelineIO.h
src/pipelineBuffer/: buffer.cpp  buffer.h  bufferManager.cpp  bufferManager.h  bufferSync.cpp  bufferSync.h  cpuBuffer.cpp  cpuBuffer.h  gpuBuffer.cpp  gpuBuffer.h  spectrumBuffer.cpp  spectrumBuffer.h  vec3fBuffer.cpp  vec3fBuffer.h
src/renderPass/: glPass.cpp  glPass.h  rasterGBufferPass.cpp  rayPass.cpp  rayPass.h  renderPass.cpp  renderPass.h  renderPassType.h  renderToScreenPass.cpp  renderToScreenPass.h  rtFullGiPass.cpp  rtFullGiPass.h  ssAmbientPass.cpp  ssLightPass.cpp  ssLightPass.h
src/renderPass/denoise/: atrousDenoiserPass.cpp  atrousDenoiserPass.h
src/renderPass/post/: toneMapPass.cpp  toneMapPass.h
src/renderPass/raster/: rasterGBufferPass.cpp  rasterGBufferPass.h  ssAmbientPass.cpp  ssAmbientPass.h  ssLightPass.cpp  ssLightPass.h
src/renderPass/ray/: pathTracePass.cpp  pathTracePass.h
src/renderer/: glRenderer.cpp  glRenderer.h  ptRenderer.cpp  ptRenderer.h  renderer.cpp  renderer.h
src/sampler/: sampler.cpp  sampler.h  sampling.h
src/scene/: mesh.h  obj2scene.cpp  obj2scene.h  scene.cpp  scene.h
src/shaders/: denoiseAtrous.fs  denoiseAtrousDiffuse.fs  drawTexture.fs  drawTextureTonemap.fs  loadShader.cpp  loadShader.h  rasterAmbient.fs  rasterGBuffer.fs  rasterGBuffer.vs  rasterLight.fs  ssAmbient.fs  ssLight.fs  ssToneMap.fs
src/spectrum/: rgbSpectrum.h
src/texture/: texture.cpp  texture.h
